# FakeProject

./: .env  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
Data_Prepare/Photo_Processing/: Data_train_test.py  Data_train_valid_test.py  Editor.py  Labeler.py
Data_Prepare/Tests_And_Backups/: Backup_admin.py  Counter.py  Create_test.py
Model/: Article.py  Test.py  Testing.py  Train.py  TrainLightning.py  VisualTest.py
Model/logs/convnext_experiment/: events.out.tfevents.1737288443.Komputer  events.out.tfevents.1737288504.Komputer
Model/logs/efficientnet_experiment/: events.out.tfevents.1737288443.Komputer  events.out.tfevents.1737288504.Komputer
Model/logs/regnet_experiment/: events.out.tfevents.1737288443.Komputer  events.out.tfevents.1737288504.Komputer
Model/logs/three_models_tests/: events.out.tfevents.1737290001.Komputer  events.out.tfevents.1737291130.Komputer  events.out.tfevents.1737292129.Komputer
Model/logs/three_models_tests_100_epochs/: events.out.tfevents.1737314053.Komputer  events.out.tfevents.1737319723.Komputer  events.out.tfevents.1737400457.Komputer
ModelLightning/: CaptumGradCam.py  LightningModel.py  LightningVisualTest.py  TrainLightning.py  data.py  data_transforms.py  model.py  modelEnsemble.py
Photo_Processing/: Data_train_test.py  Editor.py  Labeler.py
Tests_And_Backups/: Backup_admin.py  Counter.py  Create_test.py
app/: app.py
model_lightning/: LightningModel.py  LightningVisualTest.py  TrainLightning.py  data.py  data_transforms.py
nike_pack/: __init__.py
setup/: __init__.py
(+222 files in other folders)
